fix filter logic and listing scoping. fix get_post_date method to not destroy unless listing unless 404. move unhide button was covering hide links

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -14,7 +14,7 @@ $listing: 16px;
 
 #undo-hide {
   margin-top: 35vh;
-  margin-left: 1vw;
+  margin-left: 40vw;
   position: fixed;
   font-size: 1.2em;
 }
